--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "NODE_ENV=production babel src --extensions \".js,.ts\" --out-dir build --copy-files",
     "dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
     "test": "NODE_ENV=test jest",
-    "lint": "eslint --ext .ts --ignore-path .gitignore ."
+    "lint": "eslint --ext .ts --ignore-path .gitignore .",
+    "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
