--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.4.1",
@@ -24,7 +25,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "csv-parse": "^5.3.4",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.9.0",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
