--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "cors": "^2.8.5",
     "csv-parse": "^5.3.4",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
