--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parse": "^5.3.4",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^4.9.0",
+    "slugify": "^1.6.5",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   }
